--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=BookEase
+#spring.application.name=jdbc:mysql://localhost:3306/bookEaseDb?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/bookEaseDb?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=Iniestajnr1$
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=create
