inavlid password format test , invalid email format test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,11 @@ spring.datasource.username=root
 spring.datasource.password=Iniestajnr1$
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+
+#private String name;
+#private LocalDate date;
+#private int availableAttendees;
+#private String description;
+#private Category category;
+
