--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 #spring.application.name=jdbc:mysql://localhost:3306/bookEaseDb?createDatabaseIfNotExist=true
 spring.datasource.url=jdbc:mysql://localhost:3306/bookEaseDb?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=Iniestajnr1$
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+spring.config.import=secrets.properties
