--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,13 @@
 			<version>7.0.0</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>8.0</version>
+			<scope>provided</scope>
+		</dependency>
+
 
 	</dependencies>
 
