--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,7 +38,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker image
-        run: docker build -t adeshianaqudus/BookEase:latest .
+        run: docker build -t adeshianaqudus/bookease:latest .
 
       - name: Push Docker image to Docker Hub
-        run: docker push adeshianaqudus/BookEase:latest
+        run: docker push adeshianaqudus/bookease:latest
