--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Deploy Docker Image to EC2
+name: Build and Deploy to EC2
 
 on:
   push:
@@ -22,9 +22,12 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build and push Docker image
+    - name: Build Docker image
       run: |
         docker build -t ${{ secrets.DOCKER_USERNAME }}/your-docker-image:latest .
+
+    - name: Push Docker image
+      run: |
         docker push ${{ secrets.DOCKER_USERNAME }}/your-docker-image:latest
 
     - name: Install AWS CLI
@@ -50,13 +53,11 @@ jobs:
 
         echo "Instance $INSTANCE_ID is running at $PUBLIC_DNS"
 
+        # Copy the SSH key to the runner
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > $HOME/.ssh/${{ secrets.KEY_NAME }}.pem
+        chmod 600 $HOME/.ssh/${{ secrets.KEY_NAME }}.pem
+
         SSH_COMMANDS="sudo yum update -y
                       sudo amazon-linux-extras install docker -y
                       sudo service docker start
                       sudo usermod -a -G docker ec2-user
-                      sudo systemctl enable docker
-                      echo $DOCKER_PASSWORD | docker login --username $DOCKER_USERNAME --password-stdin
-                      docker pull $DOCKER_USERNAME/your-docker-image:latest
-                      docker run -d $DOCKER_USERNAME/your-docker-image:latest"
-
-        ssh -o StrictHostKeyChecking=no -i $GITHUB_WORKSPACE/${KEY_NAME}.pem $INSTANCE_USER@$PUBLIC_DNS "$SSH_COMMANDS"
